:construction: wip new site

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
