--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,6 +7,8 @@
     --background: 0 0% 100%;
     --foreground: 240 10% 3.9%;
 
+    --background-secondary: 0 0% 96%;
+
     --card: 0 0% 100%;
     --card-foreground: 240 10% 3.9%;
 
@@ -36,8 +38,10 @@
   }
 
   .dark {
-    --background: 240 10% 3.9%;
+    --background: 240 10% 4%;
     --foreground: 0 0% 98%;
+
+    --background-secondary: 240 10% 8%;
 
     --card: 240 10% 3.9%;
     --card-foreground: 0 0% 98%;
@@ -71,13 +75,15 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background-secondary text-foreground;
   }
 }
 
 html {
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
