--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,12 @@
     --secondary: 240 4.8% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
+    --tertiary: 205 77.2% 49.8%;
+    --tertiary-foreground: 200 100% 97.3%;
+
+    --quaternary: 74 47% 55%
+    --quaternary-foreground: 20 100% 97.3%;
+
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
@@ -54,6 +60,12 @@
 
     --secondary: 240 3.7% 15.9%;
     --secondary-foreground: 0 0% 98%;
+
+    --tertiary: 205 77.2% 49.8%;
+    --tertiary-foreground: 200 100% 97.3%;
+
+    --quaternary: 74 47% 55%
+    --quaternary-foreground: 20 100% 97.3%;
 
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
