--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,66 +18,66 @@
     --primary: 346.8 77.2% 49.8%;
     --primary-foreground: 355.7 100% 97.3%;
 
-    --secondary: 240 4.8% 95.9%;
+    --secondary: 240 0% 95.9%;
     --secondary-foreground: 240 5.9% 10%;
 
     --tertiary: 205 77.2% 49.8%;
     --tertiary-foreground: 200 100% 97.3%;
 
-    --quaternary: 74 47% 55%
+    --quaternary: 74 47% 55%;
     --quaternary-foreground: 20 100% 97.3%;
 
-    --muted: 240 4.8% 95.9%;
+    --muted: 240 0% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
 
-    --accent: 240 4.8% 95.9%;
+    --accent: 240 0% 95.9%;
     --accent-foreground: 240 5.9% 10%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
 
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
+    --border: 240 0% 90%;
+    --input: 240 0% 90%;
     --ring: 240 10% 3.9%;
 
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 240 10% 4%;
+    --background: 240 0% 6%;
     --foreground: 0 0% 98%;
 
-    --background-secondary: 240 10% 8%;
+    --background-secondary: 240 0% 10%;
 
-    --card: 240 10% 3.9%;
+    --card: 240 0% 8%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 240 10% 3.9%;
+    --popover: 240 0% 3.9%;
     --popover-foreground: 0 0% 98%;
 
     --primary: 346.8 77.2% 49.8%;
     --primary-foreground: 355.7 100% 97.3%;
 
-    --secondary: 240 3.7% 15.9%;
+    --secondary: 240 0% 15.9%;
     --secondary-foreground: 0 0% 98%;
 
     --tertiary: 205 77.2% 49.8%;
     --tertiary-foreground: 200 100% 97.3%;
 
-    --quaternary: 74 47% 55%
+    --quaternary: 74 47% 55%;
     --quaternary-foreground: 20 100% 97.3%;
 
-    --muted: 240 3.7% 15.9%;
+    --muted: 240 0% 15.9%;
     --muted-foreground: 240 5% 64.9%;
 
-    --accent: 240 3.7% 15.9%;
+    --accent: 240 0% 15.9%;
     --accent-foreground: 0 0% 98%;
 
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
 
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
+    --border: 240 0% 15.9%;
+    --input: 240 0% 15.9%;
     --ring: 240 4.9% 83.9%;
   }
 }
@@ -87,7 +87,7 @@
     @apply border-border;
   }
   body {
-    @apply bg-background-secondary text-foreground;
+    @apply bg-background text-foreground;
   }
 }
 
