--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,81 +4,72 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
+    --background: 0 0% 96%;
+    --foreground: 0 0% 0%;
 
-    --background-secondary: 0 0% 96%;
+    --background-secondary: 0 0% 88%;
 
     --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
+    --card-foreground: 240 0% 0%;
 
     --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
+    --popover-foreground: 0 0% 0%;
 
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 0 0% 92%;
+    --secondary-foreground: 0 0% 0%;
 
-    --secondary: 240 0% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+    --muted: 240 0% 95%;
+    --muted-foreground: 240 0% 50%;
 
-    --tertiary: 205 77.2% 49.8%;
-    --tertiary-foreground: 200 100% 97.3%;
+    --accent: 0 0% 90%;
+    --accent-foreground: 0 0% 10%;
 
-    --quaternary: 74 47% 55%;
-    --quaternary-foreground: 20 100% 97.3%;
-
-    --muted: 240 0% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-
-    --accent: 240 0% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
+    --destructive: 0 75% 60%;
+    --destructive-foreground: 0 0% 100%;
 
     --border: 240 0% 90%;
     --input: 240 0% 90%;
     --ring: 240 10% 3.9%;
 
+    --primary: 350 75% 50%;
+    --primary-foreground: 0 100% 100%;
+
+    --tertiary: 200 75% 50%;
+    --tertiary-foreground: 0 0% 100%;
+
+    --quaternary: 140 75% 45%;
+    --quaternary-foreground: 0 0% 100%;
+
     --radius: 0.5rem;
   }
 
   .dark {
-    --background: 240 0% 6%;
+    --background: 0 0% 4%;
     --foreground: 0 0% 98%;
 
-    --background-secondary: 240 0% 10%;
+    --background-secondary: 240 0% 16%;
 
     --card: 240 0% 8%;
     --card-foreground: 0 0% 98%;
 
-    --popover: 240 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
+    --popover: 240 0% 4%;
+    --popover-foreground: 0 0% 100%;
 
-    --primary: 346.8 77.2% 49.8%;
-    --primary-foreground: 355.7 100% 97.3%;
+    --secondary: 0 0% 12%;
+    --secondary-foreground: 0 0% 90%;
 
-    --secondary: 240 0% 15.9%;
-    --secondary-foreground: 0 0% 98%;
+    --muted: 0 0% 15%;
+    --muted-foreground: 0 5% 65%;
 
-    --tertiary: 205 77.2% 49.8%;
-    --tertiary-foreground: 200 100% 97.3%;
+    --accent: 0 0% 15.9%;
+    --accent-foreground: 0 0% 100%;
 
-    --quaternary: 74 47% 55%;
-    --quaternary-foreground: 20 100% 97.3%;
+    --destructive: 3 70% 50%;
+    --destructive-foreground: 0 0% 100%;
 
-    --muted: 240 0% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-
-    --accent: 240 0% 15.9%;
-    --accent-foreground: 0 0% 98%;
-
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-
-    --border: 240 0% 15.9%;
-    --input: 240 0% 15.9%;
-    --ring: 240 4.9% 83.9%;
+    --border: 240 0% 16%;
+    --input: 240 0% 16%;
+    --ring: 200 100% 60%;
   }
 }
 
@@ -93,6 +84,7 @@
 
 html {
   box-sizing: border-box;
+  overflow: hidden;
 }
 *,
 *:before,
